tests/negative/regression/r5.orng
const a: Bool = (0, []1)